api-clusterip.yml
apiVersion: v1
kind: Service
metadata:
    name: server-svc
    labels:
        component: service
        env: dev
        enabled: "true"
        release: "n.a"
spec:
    type: ClusterIP
    selector:
        component: server
        env: dev
    ports:
        - port: 5000
          targetPort: 5000
