manifest-test.yml
apiVersion: v1
kind: Service
metadata:
    name: mongo-service
    labels:
        name: mongo-statefulset
spec:
    ports:
      - port: 27017
        targetPort: 27017
    clusterIP: None
    selector:
        role: mongo
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: mongod
spec:
    serviceName: mongo-service
    replicas: 1
    selector:
        matchLabels:
            role: mongo
    template:
        metadata:
            labels:
                role: mongo
        spec:
            terminationGracePeriodSeconds: 10
            volumes:
              - name: secrets-volume
                secret:
                  secretName: mongodb-replica-secret
                  defaultMode: 256
            containers:
              - name: mongod-container
                image: mongo
                command:
                    - "numactl"
                    - "--interleave=all"
                    - "mongod"
                    - "--bind_ip"
                    - "0.0.0.0"
                    - "--replSet"
                    - "MainRepSet"
                    - "--auth"
                    - "--clusterAuthMode"
                    - "keyFile"
                    - "--keyFile"
                    - "/etc/secrets-volume/internal-auth-mongodb-keyfile"
                    - "--setParameter"
                    - "authenticationMechanisms=SCRAM-SHA-1"
                resources:
                  requests:
                    cpu: 0.2
                    memory: 200Mi
                ports:
                  - containerPort: 27017
                volumeMounts:
                  - name: secrets-volume
                    readOnly: true
                    mountPath: /etc/secrets-volume
                  - name: mongodb-persistent-storage-claim
                    mountPath: /data/db
    volumeClaimTemplates:
        - metadata:
            name: mongodb-persistent-storage-claim
            annotations:
                volume.beta.kubernetes.io/storage-class: "standard"
          spec:
            accessModes: ["ReadWriteOnce"]
            resources:
              requests:
                storage: 1Gi
