redis-clusterip.yml
apiVersion: v1
kind: Service
metadata:
    name: redis-svc
    labels:
        component: service
        env: dev
        enabled: "true"
        release: "n.a"
spec:
    type: ClusterIP
    selector:
        component: redis
        env: dev
    ports:
        - port: 6379
          targetPort: 6379
