ingress-nginx-service-socket.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: todo-ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-proxy-protocol: "true"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
        nginx.ingress.kubernetes.io/affinity: cookie
        nginx.ingress.kubernetes.io/affinity-mode: persistent
        nginx.ingress.kubernetes.io/session-cookie-name: INGRESSCOOKIE
        nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
        nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
        nginx.ingress.kubernetes.io/session-cookie-change-on-failure: "true"
        # only working annotations for sticky sessions
        # nginx.ingress.kubernetes.io/upstream-hash-by: "$binary_remote_addr"
        # nginx.ingress.kubernetes.io/upstream-hash-by: "ip_hash"
    #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        - host: nanoscal.com
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: server-svc
                        servicePort: 5000
        - host: www.nanoscal.com
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: server-svc
                        servicePort: 5000
