ingress-nginx.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-svc
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-proxy-protocol: "true"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
        nginx.ingress.kubernetes.io/affinity: cookie
        nginx.ingress.kubernetes.io/affinity-mode: persistent
        nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
        nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
        nginx.ingress.kubernetes.io/session-cookie-change-on-failure: "true"

        nginx.ingress.kubernetes.io/use-regex: "true"
        nginx.ingress.kubernetes.io/session-cookie-path: "/socket.io"
        nginx.ingress.kubernetes.io/rewrite-target: /$1 break;
spec:
    rules:
        - host: nanoscal.com
          http:
              paths:
                  - path: /?(.*)
                    backend:
                        serviceName: client-svc
                        servicePort: 3000
                  - path: /api/?(.*)
                    backend:
                        serviceName: server-svc
                        servicePort: 5000
        - host: www.nanoscal.com
          http:
              paths:
                  - path: /?(.*)
                    backend:
                        serviceName: client-svc
                        servicePort: 3000
                  - path: /api/?(.*)
                    backend:
                        serviceName: server-svc
                        servicePort: 5000
